--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
      <head>
          <title>Index</title> 
+	 <style>
+		 
+		 body {
+			bacground-color: red; 
+		 }
+		 
+	</stile> 
      </head>
      <body>
          <h1>Internet Security</h1>
