--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	 attachments</strong>.</p>
         
 	 <p>One of the best examples of the internet security scams is the internet security essentials – a rogue security software behaving to protect the Windows computers against malware and viruses installs itself<br>
-	 through the use of a trojan horse. The fake antivirus program affected Microsoft operating systems namely the Windows 9x, 2000, XP, Vista, Windows 7 and Windows 8. It relates to the “FakeVimes” family of<br>
-	 fake antivirus malware!</p>
+	 through the use of a trojan horse. The fake antivirus program affected Microsoft operating systems namely the Windows 9x, 2000, XP, Vista, Windows 7 and Windows 8. It relates to the “FakeVimes” family<br>
+	 of fake antivirus malware!</p>
 	 
 	 <p>Internet Security Essentials Alert is a fake program which is part of a scam chiefly devised to deceive the user into paying money for malware.</p>
 		 
