--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
      </head>
      <body>
 	 <h1>Index:</h1>
-	  <a href="https://4105880.github.io/rubenguardiola.github.io/InternetSecurity">Internet Security</a>
+	  <ul>
+	  <li><a href="https://4105880.github.io/rubenguardiola.github.io/InternetSecurity">Internet Security</a></li>
+          <li><a href="https://4105880.github.io/rubenguardiola.github.io/">W3C</a></li>
+          <li><a href="https://4105880.github.io/rubenguardiola.github.io/">WAI</a></li>
+	  <li><a href="https://4105880.github.io/rubenguardiola.github.io/">WCGA</a></li>
+	  </ul>
 
 	</body>
 </html>
