--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <style>
 		 
 		 body {
-			background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg396RCYrN7Dx6zJy7WFAuVejzPuLsCIKmew&usqp=CAU width: "2000"); 
+			background: url(https://www.eltiempo.com/uploads/2019/12/07/5dec47012d257.jpeg); 
 		 }
 		 
 		 #index {
