--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <style>
 		 
 		 body {
-			background: url(https://www.eltiempo.com/uploads/2019/12/07/5dec47012d257.jpeg); 
+			background: url(https://i.pinimg.com/736x/8c/cc/6b/8ccc6b01f1d32339f43e76827d34eea5.jpg); 
 		 }
 		 
 		 #index {
