--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	 <style>
 		 
 		 body {
-			background: url(https://previews.123rf.com/images/kran77/kran771705/kran77170500049/78968057-conceito-de-fundo-tecnol%C3%B3gico-abstrato-com-v%C3%A1rios-elementos-de-tecnologia-vector-de-ilustra%C3%A7%C3%A3o-.jpg); 
-		 }
-		 
+			background: url(https://media.istockphoto.com/vectors/technology-background-icon-vector-vector-id1067217486);
+		}
 		 #index {
 			 font-size: 60px;
 		 }
