--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <style>
 		 
 		 body {
-			background: url(https://media.istockphoto.com/vectors/technology-background-icon-vector-vector-id1067217486);
+			background: url(https://image.freepik.com/vector-gratis/fondo-concepto-comunicacion-tecnologia-azul-abstracto_29865-1031.jpg);
 		}
 		 #index {
 			 font-size: 60px;
