--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <style>
 		 
 		 body {
-			background: url(https://image.freepik.com/vector-gratis/fondo-concepto-comunicacion-tecnologia-azul-abstracto_29865-1031.jpg);
+			background: url(https://i0.wp.com/image.freepik.com/free-vector/red-cyber-circuit-future-technology-concept-background_42077-2242.jpg);
 		}
 		 #index {
 			 font-size: 60px;
