--- a/W3C.html
+++ b/W3C.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
       <head>
+            <title>W3C</title>
             <style>
               body {
                      background: ;
