--- a/InternetSecurity.html
+++ b/InternetSecurity.html
@@ -20,20 +20,20 @@
 	 Web setup can include <em>firewalls</em> that <strong>prevent undesired traffic, and anti-spyware, anti-malware, and anti-virus programs that work from particular networks or devices to watch online traffic for malicious<br>
 	 attachments</strong>.</p>
         
-	 <p>One of the best examples of the internet security scams is the internet security essentials – a rogue security software behaving to protect the Windows computers against malware and viruses installs itself<br>
-	 through the use of a trojan horse. The fake antivirus program affected Microsoft operating systems namely the Windows 9x, 2000, XP, Vista, Windows 7 and Windows 8. It relates to the “FakeVimes” family<br>
-	 of fake antivirus malware!</p>
+	 <p>One of the <em>best examples of the internet security scams is the internet security essentials</em> – a <strong>rogue security software behaving to protect the Windows computers against malware and viruses installs itself<br>
+	 through the use of a trojan horse</strong>. The <em>fake antivirus program</em> <strong>affected Microsoft operating systems namely the Windows</strong> 9x, 2000, XP, Vista, Windows 7 and Windows 8. It relates to the “FakeVimes” family<br>
+		 of <strong>fake antivirus malware</strong>!</p>
 	 
-	 <p>Internet Security Essentials Alert is a fake program which is part of a scam chiefly devised to deceive the user into paying money for malware.</p>
+	 <p>Internet Security Essentials Alert is a <strong>fake program</strong> which is part of a scam chiefly devised to deceive the user into <em>paying money</em> for malware.</p>
 		 
-	 <p>Internet Security Essentials works like a rogue antivirus software. It uses the scare tactics and fakes the user into believing that it has an association with Windows in order to make the user pay for<br>
-	 the malware/virus removal. The symptoms of Internet Security Essentials infection are pretty standard. When the computer gets the infection, the user will notice a fake home screen, which is made to look as if it is<br>
-	 a window within Windows, as a system component. The fake interface will run phony system scans to deceive the user.</p>
+	 <p>Internet Security Essentials works like a <strong>rogue antivirus software</strong>. It <em>uses</em> the <strong>scare tactics and fakes</strong> the user into believing that it has an association with Windows in order to make the user pay for<br>
+	 the malware/virus removal. The symptoms of Internet Security Essentials infection are pretty standard. When the computer gets the infection, the user will notice a <strong>fake home screen</strong>, which is made to look <em>as if it is<br>
+	 a window within Windows</em>, as a system component. <strong>The fake interface will run phony system scans to deceive the user</strong>.</p>
 		 
-	 <p>The scan comes back with details of many threats found on the user computer which aren’t actually present. However, few fake malware/virus files are actually planted by the malicious Internet Security<br>
-	 Essentials program. Thereafter, the user is requested to click on a button that says “Remove all,” but when the user tries doing it, the fake Internet Security Essentials comes back with a message asking the user<br>
-	 to pay for the full version of its software to complete the malware cleaning process. The user is directed to a false website that alleges to be the company website of Internet Security Essentials, however, that’s<br>
-	 just the payment site for the scam.</p>
+	 <p>The <strong>scan comes back with <em>details</em> of many threats</strong> found on the user computer which aren’t actually present. However, few <strong>fake malware/virus files are actually planted by the malicious Internet Security<br>
+	 Essentials program</strong>. Thereafter, the user is <em>requested to click on a button that says “Remove all”</em>, but when the user tries doing it, the <strong>fake <em>Internet Security Essentials comes back</em> with a message asking the user<br>
+	 to <em>pay for the full version</em> of its software to complete the malware cleaning process</strong>. The user is directed to a <em>false website</em> that alleges to be the company website of Internet Security Essentials, however, <strong>that’s<br>
+	 just the payment site for the scam</strong>.</p>
 		
 	<p><a href="https://4105880.github.io/rubenguardiola.github.io/">Back To Index</a></p>
 
