--- a/InternetSecurity.html
+++ b/InternetSecurity.html
@@ -21,7 +21,7 @@
 	 attachments</strong>.</p>
         
 	 <p>One of the <em>best examples of the internet security scams is the internet security essentials</em> – a <strong>rogue security software behaving to protect the Windows computers against malware and viruses installs itself<br>
-	 through the use of a trojan horse</strong>. The <em>fake antivirus program</em> <strong>affected Microsoft operating systems namely the Windows</strong> 9x, 2000, XP, Vista, Windows 7 and Windows 8. It relates to the “FakeVimes” family<br>
+	 through the use of a trojan horse</strong>. The <em>fake antivirus program</em> <strong>affected Microsoft operating systems</strong> namely the Windows 9x, 2000, XP, Vista, Windows 7 and Windows 8. It relates to the “FakeVimes” family<br>
 		 of <strong>fake antivirus malware</strong>!</p>
 	 
 	 <p>Internet Security Essentials Alert is a <strong>fake program</strong> which is part of a scam chiefly devised to deceive the user into <em>paying money</em> for malware.</p>
