--- a/DigitalSignature.html
+++ b/DigitalSignature.html
@@ -20,8 +20,8 @@
             <p>When we talk about electronic signature through the electronic DNI, we are talking about a qualified electronic signature being made.</p>
             <p>This category of signature is the one that offers the greatest legal guarantees, with the same recognition as the handwritten signature,</p>
             <p>being defined according to the eIDAS Regulation as:</p>
-            <p>"An advanced electronic signature that is created by a qualified electronic signature creation device and</p>
-            <p>is based on a qualified electronic signature certificate."</p>
+            <p><em>"An advanced electronic signature that is created by a qualified electronic signature creation device and</em></p>
+            <p><em>is based on a qualified electronic signature certificate."</em></p>
             <h2>1.- Comply with the requirements to sign with the electronic DNI</h2>
             <p>First of all, we will have to check if we meet the minimum technical hardware and software requirements for its use. In the case of</p>
             <p>the electronic DNI, it will be mandatory to have a smart card reader, which can be integrated into the keyboard or connected to the</p>
