--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
 	     <h2 id = "signature">Digital Signature:</h2>
 	     <p><a href = "https://4105880.github.io/rubenguardiola.github.io/DigitalSignature"><br><img src = "https://store-images.s-microsoft.com/image/apps.15646.13510798882805664.03cd23bb-bfe9-42a8-ba03-ed2402c2f705.1b59069b-fd07-4d8a-b10d-548c7c45067f?mode=scale&q=90&h=300&w=300"></a></p>
 	     
+	     <h2 id = "programming">Structured and object oriented programming</h2>
+	     <p><a href = "https://4105880.github.io/rubenguardiola.github.io/">Differences</a></p>
+	     
 	</body>
 </html>
