--- a/StructuredVSObjectOriented.html
+++ b/StructuredVSObjectOriented.html
@@ -4,7 +4,7 @@
             <title>StructuredVSObjectOriented</title>
             <style>
               body {
-                     background-color: ;
+                     background-color: rgb(51, 255, 206) ;
               }
               #structured {
                    font-size: 45px; 
