--- a/DigitalSignature.html
+++ b/DigitalSignature.html
@@ -4,7 +4,7 @@
             <title>Digital Signature</title>
             <style>
               body {
-                     background-color: ;
+                     background-color: rgb(255, 51, 212) ;
               }
               #signature {
                    font-size: 45px; 
