--- a/WAI.html
+++ b/WAI.html
@@ -4,7 +4,7 @@
             <title>WAI</title>
             <style>
               body {
-                     background-color: ;
+                     background-color: rgb(255, 87, 51) ;
               }
               #WAI {
                    font-size: 45px; 
