--- a/WCGA.html
+++ b/WCGA.html
@@ -4,7 +4,7 @@
             <title>WCAG</title>
             <style>
               body {
-                     background-color: ;
+                     background-color: RGB(255, 246, 51) ;
               }
               #WCAG {
                    font-size: 45px; 
