--- a/WAI.html
+++ b/WAI.html
@@ -27,10 +27,10 @@
             <ul>
                   <li>Ensuring that W3C standards support accessibility</li>
                   <li>Developing accessibility guidelines for web content and applications, browsers, and authoring tools</li>
-                  <li>Developing resources to improve web accessibility evaluation processes and tools
-                  <li>Supporting education and outreach on web accessibility
-                  <li>Coordinating with research and development that may impact future accessibility of the web
-                  <li>Promoting harmonized international uptake of web accessibility standards
+                  <li>Developing resources to improve web accessibility evaluation processes and tools</li>
+                  <li>Supporting education and outreach on web accessibility</li>
+                  <li>Coordinating with research and development that may impact future accessibility of the web</li>
+                  <li>Promoting harmonized international uptake of web accessibility standards</li>
             </ul>
             
                         
