--- a/WCGA.html
+++ b/WCGA.html
@@ -40,7 +40,7 @@
             <p>There are additional success criteria in 2.1 that are not in 2.0. They are introduced in What’s New in WCAG 2.1.</p>
             <p>The proposed new success criteria in 2.2 are introduced in What’s New in WCAG 2.2 Working Draft.</p>
             
-            <p>Content that conforms to WCAG 2.1 also conforms to WCAG 2.0.</p>
+            <p><strong>Content that conforms to WCAG 2.1 also conforms to WCAG 2.0.</strong></p>
             <p>And content that conforms to WCAG 2.2 will also conform to 2.1 and 2.0. (This is often called “backwards compatible”.) A website that meets WCAG 2.1 or 2.2 should</p>
             <p>meet the requirements of policies that reference WCAG 2.0. To put it another way: If you want to meet both WCAG 2.0 and WCAG 2.1, you can use the 2.1 resources</p>
             <p>and you don’t need to bother looking at 2.0.</p>
